SONAR-15230 Fix JVM startup args for Hazelcast