@@ -42,6 +42,14 @@ public class WebJvmOptions extends JvmOptions<WebJvmOptions> {
     res.put("--add-opens=java.base/java.lang=ALL-UNNAMED", "");
     res.put("--add-opens=java.base/java.io=ALL-UNNAMED", "");
     res.put("--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED", "");
+
+    // avoid illegal reflective access operations done by Hazelcast
+    res.put("--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED", "");
+    res.put("--add-opens=java.base/java.nio=ALL-UNNAMED", "");
+    res.put("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED", "");
+    res.put("--add-opens=java.management/sun.management=ALL-UNNAMED", "");
+    res.put("--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED", "");
+
     return res;
   }
 }
